<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:id="@+id/main_display_mode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calc_mode" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radBin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/calc_bin" />

                <RadioButton
                    android:id="@+id/radDec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/calc_dec" />

                <RadioButton
                    android:id="@+id/radHex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/calc_hex" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_display_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:background="@color/white"
            android:orientation="vertical"
            android:weightSum="100">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="60"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/main_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/calc_display"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="35sp" />
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/sub_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp" />
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/calc_D"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_D"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_E"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_E"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_F"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_F"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_and"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_and"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/calc_A"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_A"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_B"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_B"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_C"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_C"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_or"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_or"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/calc_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_7"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_8"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_9"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_div"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_div"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/calc_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_4"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_5"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_6"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_times"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_mult"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/calc_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_1"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_2"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_3"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_minus"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/calc_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_0"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_dot"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_equal"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Button
                android:id="@+id/calc_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/calc_btn"
                android:text="@string/calc_plus"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
